using UnityEngine;
using Pathfinding;

/// <summary>
/// G√®re le d√©placement automatique d‚Äôun PNJ vers une cible en utilisant le pathfinding A*.
/// Met √† jour les animations selon la direction et notifie l'arriv√©e via le script <c>BesoinPlayers</c>.
/// </summary>
public class PathfindingAI : MonoBehaviour
{
    /// <summary>Transform de la cible √† atteindre.</summary>
    public Transform target;

    /// <summary>Vitesse de d√©placement du PNJ.</summary>
    public float speed = 200f;

    /// <summary>Distance minimale pour passer au waypoint suivant.</summary>
    public float nextWayPointDistance = 0.3f;

    private Path path;
    private int currentWayPoint = 0;

    private Seeker seeker;
    private Animator animator;

    /// <summary>Initialise le seeker et d√©marre la mise √† jour du chemin √† intervalle r√©gulier.</summary>
    void Start()
    {
        seeker = GetComponent<Seeker>();
        animator = GetComponentInChildren<Animator>();
        InvokeRepeating("UpdatePath", 0f, 0.5f);
    }

    /// <summary>Demande au Seeker de recalculer un chemin vers la cible.</summary>
    void UpdatePath()
    {
        if (seeker.IsDone() && target != null)
        {
            seeker.StartPath(transform.position, target.position, OnPathComplete);
        }
    }

    /// <summary>Callback appel√©e lorsque le chemin est calcul√© avec succ√®s.</summary>
    void OnPathComplete(Path p)
    {
        if (!p.error)
        {
            path = p;
            currentWayPoint = 0;
        }
    }

    /// <summary>D√©place le PNJ frame par frame en suivant le chemin calcul√©.</summary>
    void FixedUpdate()
    {
        if (path == null || target == null) return;

        if (currentWayPoint >= path.vectorPath.Count)
        {
            animator?.SetBool("isMoving", false);
            GetComponent<BesoinPlayers>().NotifieArrivee();
            return;
        }

        Vector3 targetPosition = path.vectorPath[currentWayPoint];
        targetPosition.z = transform.position.z;

        Vector3 direction = (targetPosition - transform.position).normalized;

        // üéûÔ∏è Animation
        if (animator != null)
        {
            animator.SetFloat("moveX", direction.x);
            animator.SetFloat("moveY", direction.y);
            animator.SetBool("isMoving", true);
        }

        // ‚úÖ Mouvement constant
        Vector3 move = direction * speed * Time.deltaTime;
        transform.position += move;

        float distance = Vector3.Distance(transform.position, targetPosition);

        // Juste avant la fin du chemin ‚Üí pr√©pare la satisfaction
        if (currentWayPoint == path.vectorPath.Count - 1)
        {
            GetComponent<BesoinPlayers>().PreparerSatisfaction();
        }

        if (distance < nextWayPointDistance)
        {
            currentWayPoint++;

            if (currentWayPoint >= path.vectorPath.Count)
            {
                transform.position = targetPosition;
                animator?.SetBool("isMoving", false);
                GetComponent<BesoinPlayers>().NotifieArrivee();
            }
        }
    }

    public void setTarget(Transform newTarget)
    {
        target = newTarget;
    }
}
